# urdf2mjcf

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
align_stp/: READMD.md  assign_mesh_part.py  merge_urdf.py  split_stp.py  stp_read.py
align_stp/models/golf/: galbot_one_golf.urdf
examples/: urdf_format.py
examples/agilex-piper/: README.md  piper.urdf  piper_with_camera.urdf
examples/agilex-piper/metadata/: actuator.json  appendix.xml  default.json
examples/realman-rm65/: README.md  rm65b_eg24c2_description.urdf  rm_65_b_description.urdf
examples/realman-rm65/meshes/: base_link.dae.bak  link1.dae  link2.dae
examples/realman-rm65/meshes/visual/: base_link.dae  link3.dae  link4.dae  link5.dae  link6.dae
examples/realman-rm65/metadata/: actuator.json  appendix.xml  default.json
urdf2mjcf/: __init__.py  convert.py  geometry.py  materials.py  mjcf_builders.py  model.py  package_resolver.py  utils.py
urdf2mjcf/postprocess/: add_appendix.py  add_light.py  check_shell.py  convex_collision.py  convex_decomposition.py  mesh_converter.py  split_obj_materials.py  test.ipynb  update_mesh.py
